// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemChildren should default the left and right addon types and positions to "icon" and "middle" 1`] = `
<div>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    Left Addon
  </span>
  <span
    class="rmd-list-item__text"
  >
    Primary Text
  </span>
  <span
    class="rmd-icon--after rmd-list-item__addon"
  >
    Right Addon
  </span>
</div>
`;

exports[`ListItemChildren should render correctly 1`] = `
<div>
  Content
</div>
`;

exports[`ListItemChildren should render correctly 2`] = `
<div>
  <span
    class="rmd-list-item__text"
  >
    Content
  </span>
</div>
`;

exports[`ListItemChildren should render correctly 3`] = `
<div>
  <span
    class="rmd-list-item__text"
  >
    Content
  </span>
</div>
`;

exports[`ListItemChildren should render correctly 4`] = `
<div>
  <span
    class="rmd-list-item__text"
  >
    Primary
    <span
      class="rmd-list-item__text rmd-list-item__text--secondary"
    >
      Secondary
    </span>
  </span>
</div>
`;

exports[`ListItemChildren should render the leftAddon correctly based on the leftAddonType and leftAddonPosition props 1`] = `
<div>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
    data-testid="addon"
  >
    Left Addon
  </span>
  <span
    class="rmd-list-item__text"
  >
    Primary Text
  </span>
</div>
`;
